--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
 postgres.driver=org.postgresql.Driver
 postgres.url=jdbc:postgresql://localhost:5432/postgres
 postgres.password=user
-postgres.name=myfirstdb
+postgres.name=postgres
